# CppProjectTemplate

./: .editorconfig  .gitignore  CMakeLists.txt
Core/: CMakeLists.txt
Core/Inc/Core/: Core.hpp  Pch.hpp
Core/Src/Core/: Core.cpp
Sandbox/: CMakeLists.txt
Sandbox/Src/: main.cpp
cmake/: InitCPM.cmake
